Change picture, profile description and English skill

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           </div>
           <div class="col-2">
             <p>
-              <img src="img/me.jpeg" alt="Me">
+              <img src="img/me.png" alt="Me" width="150">
             </p>
           </div>
         </div>
@@ -48,7 +48,7 @@
               Développeur Web depuis près de 10 ans, je suis spécialisé dans le développement de projets Web en Ruby.
               Je suis actuellement MOE informatique à la RATP.
               <br>
-              Je suis également formateur à l'ESGI et l'IUT UPEM et développeur auto-entrepreneur en parallèle de mon activité principale.
+              J'interviens également en tant que formateur à l'ESGI et l'IUT UPEM et développeur auto-entrepreneur en parallèle de mon activité principale.
             </p>
           </div>
 
@@ -78,6 +78,11 @@
             <h4>HTML / CSS</h4>
             <div class="progress">
               <div class="progress-red bar" style="width:80%"></div>
+            </div>
+
+            <h4>Anglais courant</h4>
+            <div class="progress">
+              <div class="progress-red bar" style="width:85%"></div>
             </div>
           </div>
 
