Update resume and add English version

--- a/index_en_gb.html
+++ b/index_en_gb.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="fr">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/fontawesome.css">
     <link rel="stylesheet" href="css/styles.css">
 
-    <title>Rémy HANNEQUIN - CV</title>
+    <title>Rémy HANNEQUIN - Resume</title>
   </head>
   <body>
     <div class="container">
@@ -20,14 +20,14 @@
         <div class="row">
           <div class="col-10">
             <h1>Rémy HANNEQUIN</h1>
-            <h2>Développeur Backend &amp; Web</h2>
+            <h2>Web developer</h2>
 
             <p class="communication">
               <span class="item">+33.6.78.40.18.50</span>
               <span class="item">hello@rhannequ.in</span>
               <span class="item">http://rhannequ.in</span>
               <span class="item">Paris, FR</span>
-              <span class="item">30 ans</span>
+              <span class="item">30 years old</span>
             </p>
           </div>
           <div class="col-2">
@@ -43,17 +43,17 @@
         <div class="col-5">
 
           <div class="profile">
-            <h3>Profil</h3>
+            <h3>About</h3>
             <p>
-              Développeur Web depuis plus de 10 ans, je suis spécialisé dans le développement de projets Web en Ruby et particulièrement Ruby on Rails.
-              Je suis actuellement Fullstack Engineer à Getaround.
+              Web developer for more than 10 years, I am specialised in web projects development with Ruby and especially Ruby on Rails.
+              I am currently Fullstack Engineer at Getaround.
               <br>
-              J'interviens également en tant que formateur à l'ESGI et l'IUT UPEM et développeur auto-entrepreneur en parallèle de mon activité principale.
+              I have been teaching Ruby and Rails in several schools and experienced freelancing outside my main activity.
             </p>
           </div>
 
           <div class="skills">
-            <h3>Compétences</h3>
+            <h3>Skills</h3>
 
             <h4>Ruby / Rails</h4>
             <div class="progress">
@@ -70,24 +70,24 @@
               <div class="bar" style="width:70%"></div>
             </div>
 
-            <h4>Tests automatisés</h4>
+            <h4>Testing</h4>
             <div class="progress">
               <div class="bar" style="width:85%"></div>
             </div>
 
-            <h4>CI / Outillage / Monitoring</h4>
+            <h4>CI / Tooling / Monitoring</h4>
             <div class="progress">
               <div class="bar" style="width:70%"></div>
             </div>
 
-            <h4>Anglais courant</h4>
+            <h4>English-speaking</h4>
             <div class="progress">
               <div class="bar" style="width:85%"></div>
             </div>
           </div>
 
           <div class="hobbies">
-            <h3>Passions</h3>
+            <h3>Hobbies</h3>
 
             <div class="row">
               <div class="col-6">
@@ -95,22 +95,22 @@
                   <i class="far fa-futbol"></i> Handball<br>
                 </p>
                 <p>
-                  <i class="fas fa-moon"></i> Astronomie
+                  <i class="fas fa-moon"></i> Stargazing
                 </p>
               </div><!-- .col-6 -->
               <div class="col-6">
                 <p>
-                  <i class="fas fa-utensils"></i> Cuisine
+                  <i class="fas fa-utensils"></i> Cooking
                 </p>
                 <p>
-                  <i class="fas fa-mortar-pestle"></i> Fermentations
+                  <i class="fas fa-mortar-pestle"></i> Fermeting stuff
                 </p>
               </div><!-- .col-6 -->
             </div>
           </div>
 
           <div class="social">
-            <h3>Médias sociaux</h3>
+            <h3>Social medias</h3>
 
             <p><i class="fab fa-github"></i> github.com/rhannequin</p>
             <p><i class="fab fa-linkedin"></i> linkedin.com/rhannequin</p>
@@ -122,62 +122,60 @@
         <div class="col-7">
 
           <div class="education">
-            <h3>Formation</h3>
+            <h3>Education</h3>
 
             <h4>ESGI, 2014</h4>
-            <p>Mastère Ingénierie du Web &amp; E-Business</p>
+            <p>Master degree in Web Engineering &amp; E-business</p>
             <h4>IUT UPEM, 2013</h4>
-            <p>Licence professionnelle ATC STIC</p>
+            <p>Professional bachelor degree in Multimedia</p>
             <h4>IUT UPEM, 2011</h4>
-            <p>DUT Services et Réseaux de Communication</p>
+            <p>Bachelor degree in Multimedia</p>
           </div>
 
           <div class="experience">
-            <h3>Expérience</h3>
+            <h3>Experiences</h3>
 
             <div class="xp">
-              <h4><span class="company">Getaround, depuis 2019 - <em>Paris</em></span><span class="activity"> – Fullstack Engineer</span></h4>
+              <h4><span class="company">Getaround, since 2019 - <em>Paris</em></span><span class="activity"> – Fullstack Engineer</span></h4>
               <p>
-                Développement de fonctionnalités, maintenance, monitoring et R&D dans différentes squads du produit
+                In charge of developing new features, maintaining the current ones, monitoring and R&D in multiple squads of the product
               </p>
             </div>
 
             <div class="xp">
-              <h4><span class="company">RATP, depuis 2014 - <em>Paris</em></span><span class="activity"> – MOE informatique Développeur Web</span></h4>
+              <h4><span class="company">RATP, 2014 to 2019 - <em>Paris</em></span><span class="activity"> – Web projects manager and developer</span></h4>
               <p>
-                MOE projets web et mobiles, développement Ruby, pilotage<br>
-                Projets notables : App. Android pour mainteneurs, socle technique Ruby d'entreprise, console administration
+                Managing and developing with Ruby<br>
+                Significant projects: Android app for maintainer, Ruby company apps generator, administration console
               </p>
             </div>
 
             <div class="xp">
-              <h4><span class="company">Formateur Web / Ruby, depuis 2014 - <em>Paris</em></span><span class="activity"> – IUT UPEM & ESGI</span></h4>
+              <h4><span class="company">Web / Ruby Trainer, 2014 to 2019 - <em>Paris</em></span><span class="activity"> – IUT UPEM & ESGI</span></h4>
               <p>
-                Enseignement de Ruby, Rails et MVC en 4A IW (ESGI),
-                <br>
-                3A AL (ESGI) et LP CRRW (IUT UPEM)
+                Teaching Ruby, Rails, MVC pattern and building MVP
               </p>
             </div>
 
             <div class="xp">
-              <h4><span class="company">RATP, 2012 - 2014 - <em>Paris</em></span><span class="activity"> – Apprenti Développeur Web</span></h4>
+              <h4><span class="company">RATP, 2012 to 2014 - <em>Paris</em></span><span class="activity"> – Web developer - Apprentice</span></h4>
               <p>
-                Apprentissage du pilotage, développement Java, Ruby, JavaScript<br>
-                Projet notable : application web pour la supervision informatique du département
+                Project management and development with Java, Ruby, JavaScript
+                Significant projects: web app for monitoring IT department apps
               </p>
             </div>
 
             <div class="xp">
-              <h4><span class="company">Kontest, 2011 - 2012 - <em>Paris</em></span><span class="activity"> – Apprenti Développeur Web</span></h4>
+              <h4><span class="company">Kontest, 2011 to 2012 - <em>Paris</em></span><span class="activity"> – Web developer - Apprentice</span></h4>
               <p>
-                Ajout de fonctionnalités, de typologie de jeu (blindtest, vidéo), utilisation d'API Deezer, YouTube, Dailymotion. Création de suites de tests fonctionnels automatisés
+                Added features and games types (blindtest, video), used multiple API providers like Deezer, YouTube, Dailymotion. Added automated test suites.
               </p>
             </div>
 
             <div class="xp">
-              <h4><span class="company">Urbanmedia Ltd, 2011 - <em>Singapour</em></span><span class="activity"> – Stagiaire Développeur Web</span></h4>
+              <h4><span class="company">Urbanmedia Ltd, 2011 - <em>Singapore</em></span><span class="activity"> – Web developer - Intern</span></h4>
               <p>
-                Ajouts de fonctionnalités pour application iOS et Android, génération automatique de factures
+                Added features for iOS and Android app and invoices generation
               </p>
             </div>
           </div>
