Updates and PDF generation

--- a/index_en_gb.html
+++ b/index_en_gb.html
@@ -146,7 +146,7 @@
               <h4><span class="company">RATP, 2014 to 2019 - <em>Paris</em></span><span class="activity"> – Web projects manager and developer</span></h4>
               <p>
                 Managing and developing with Ruby<br>
-                Significant projects: Android app for maintainer, Ruby company apps generator, administration console
+                Significant projects: Android app for maintainer, company's Ruby apps generator, administration console
               </p>
             </div>
 
@@ -160,7 +160,7 @@
             <div class="xp">
               <h4><span class="company">RATP, 2012 to 2014 - <em>Paris</em></span><span class="activity"> – Web developer - Apprentice</span></h4>
               <p>
-                Project management and development with Java, Ruby, JavaScript
+                Project management and development with Java, Ruby, JavaScript<br>
                 Significant projects: web app for monitoring IT department apps
               </p>
             </div>
